--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
