--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.3",
     "core-js": "^3.8.3",
+    "s-vuex-class": "^0.4.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
